# Ayuz

./: Cargo.toml  README.md
locales/: de.yml  en.yml
packaging/: asus-hub-appimage.desktop  de.guido.asus-hub.metainfo.xml  de.guido.asus-hub.yml  de.guido.ayuz.metainfo.xml
src/: app.rs  main.rs  search.rs
src/components/: fan.rs  mod.rs
src/components/audio/: mod.rs  sound_modes.rs  volume.rs
src/components/display/: farbskala.rs  helpers.rs  mod.rs  oled_care.rs  oled_dimming.rs  splendid.rs  zielmodus.rs
src/components/input/: fn_key.rs  gestures.rs
src/components/keyboard/: fn_key.rs
src/components/system/: gpu.rs  mod.rs
src/services/: commands.rs  config.rs  dbus.rs  edge_gestures.rs
