[package]
name = "asus-hub"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Traciges/Asus-Hub"

[dependencies]
relm4 = { version = "0.10", features = ["libadwaita"] }
libadwaita = { version = "0.8", features = ["v1_8"] }
gtk4 = { version = "0.10", features = ["v4_14"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
futures-util = "0.3"
ksni = "0.2"
evdev = { version = "0.13.2", features = ["tokio"] }
rust-i18n = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/asus-hub", "usr/bin/asus-hub", "755"],
    ["packaging/de.guido.asus-hub.desktop", "usr/share/applications/", "644"],
    ["packaging/de.guido.asus-hub.metainfo.xml", "usr/share/metainfo/", "644"],
    ["assets/trayicon.png", "usr/share/icons/hicolor/128x128/apps/de.guido.asus-hub.png", "644"],
]
